	* po/vi.po: Updated Vietnamese translation.
	* po/bg.po: New Bulgarian translation.
	* configure.in (ALL_LINGUAS): Add bg.
	* configure: Regenerate.

2010-04-20  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated french translation.

2010-04-20  Nick Clifton  <nickc@redhat.com>

	* readelf.c: Add _() macros to constant strings that are
	translatable.

2010-04-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* readelf.c (arm_attr_tag_FP_arch): Rename from arm_attr_tag_VFP_arch.
	(arm_attr_tag_ABI_align8_needed): Remove.
	(arm_attr_tag_ABI_align8_preserved): Remove.
	(arm_attr_tag_ABI_HardFP_use): Update text strings.
	(arm_attr_public_tags): Add strings for ABI v2.08 attribute tags.
	(display_arm_attribute): Add decoding of ABI v2.08 attributes.

2010-04-13  Nick Clifton  <nickc@redhat.com>

	PR binutils/11419
	* dwarf.c (process_debug_info): Initialise the signature array.

2010-04-09  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (process_debug_info): Remove unused variable
	cu_abbrev_offset_ptr.
	(display_debug_lines_decoded): Remove unused variable prev_line.
	* elfedit.c (process_archive): Remove unused variable
	file_name_size.
	* ieee.c (ieee_start_compilation_unit): Remove unused variable
	nindx.
	(ieee_set_type): Remove unused variables info, targetindx and
	baseindx.
	* objdump.c (disassmble_byte): Remove unused variable done_dot.
	* rddbg.c (read_section_stabs_debugging_info): Remove unused
	variable other.
	* readelf.c (dump_section_as_strings): Remove unused variable
	addr.
	(process_archive): Remove unused variable file_name_size.
	* stabs.c (parse_stab_string): Mark desc parameter as unused.
	Remove unused variable lineno.
	(parse_stab_struct_type): Remove unused variable orig.
	(stab_demangle_type): Remove unused variables constp, volatilep
	and hold.

2010-04-07  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2010-04-06  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.
