@@ -1,3 +1,14 @@
+2010-08-20  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	* ld-mips-elf/attr-gnu-4-01.d: Correct Tag_GNU_MIPS_ABI_FP.
+	* ld-mips-elf/attr-gnu-4-02.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-10.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-11.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-15.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-20.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-22.d: Likewise.
+	* ld-mips-elf/attr-gnu-4-25.d: Likewise.
+
 2010-08-19  Alan Modra  <amodra@gmail.com>
 
 	* ld-scripts/memory.t: Remove ORIGIN fudge.
